- BASIC: Tidied up an earlier cheat - when interpreting @%, if the top byte
  is non-zero then STR$ obeys @% so we were masking against &FF - but we
  were setting all the top bits when using "+". This is fixed now the top
  byte is set to 1 instead. (We still check the byte is non-zero.)
- BASIC: Raising to the power has better bounds checking.
- Examples: Telstar client: Removed unnecessary code, TEEFAX server change,
  added new Teletext services and a custom address option.

* V1.22.13 - 26 January 2022
- System: Stricter handling of oversize variable and PROC/FN names.
- System: Improved handling of ESCAPE under RISC OS (notably, it no longer
  crashes the interpreter).
- System: Improve behaviour on Linux console framebuffer, particulary
  Raspberry Pi. Experience may vary across other hardware.
- System: Remove the old keyboard code, JGH's NEWKBD code is now the only
  version present.
- System: On non-RISC OS platforms, when using LOAD, CHAIN, OPENIN and
  OPENUP, if file isn't found, retry with a .bbc suffix before complaining.
  SAVE and OPENOUT will not use a .bbc suffix unless explicitly provided in
  the filename.
- System: Permit system memory to be up to 4194303K (4GB less 1K)
- System: Programs saved under RISC OS now get file type &FD1 (allocated by
  Acorn as BASIC stored as text). The file type is associated with Matrix
  Brandy for loading and running by double-clicking on the desktop.
- System: RISC OS: MODE in form xres,yres,depth was broken. Fixed.
- Graphics: Reworked line drawing, the earlier adaption of upstream was not
  right. This new version is based on PiTubeDirect's implementation.
- Graphics: Dot patterns, VDU23,6 and OSBYTE 163,242 now implemented
- Graphics: Fixed a crash bug due to SDL not being particularly thread-safe.
- BASIC: PRINT and STR$ now support displaying a decimal comma instead of a
  point.
- BASIC: PRINT and STR$ now show exponents in the style used by the BBC and
  RISC OS, rather than the C standard.